client/src/index.css
:root {
  --primary: #f1edef;
  --secondary: white;
  --tertiary: black;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--primary);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.backPrimary {
  background-color: var(--secondary);
  border-top: 3px solid var(--tertiary);
  border-bottom: 3px solid var(--tertiary);
}

.navbar-toggler {
  margin-left: auto;
}

.rounded {
  border-radius: 20px !important;
}

.rounded-top {
  border-radius: 20px 20px 0px 0px !important;
}

.btn {
  border: 1px solid var(--tertiary) !important;
  outline: none !important;
}

.btnForm,
.btnFormReverse:hover,
.btn:focus {
  border: none;
  background-color: var(--tertiary);
  color: var(--secondary);
}

.btnFormReverse,
.btnForm:hover,
.btn:focus.btnFormReverse:focus {
  background-color: var(--secondary);
  color: var(--tertiary);
}

.pointer {
  cursor: pointer;
}

.w-90 {
  width: 90%;
}

.hero {
  background-image: url("../public/images/pasture-hero.jpg");
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .3);
  background-repeat: no-repeat;
  background-position: center;
  height: 60vh;
  width: 100%;
}

.hero-logo {
  /* max-height: 80%;
  min-width: 30%; */
  object-fit: contain;
  max-height: 80%;
}

.border-black {
  border-color: var(--tertiary) !important;
}

img[src="/images/four-pack.png"] {
  border-bottom: 1px solid black;
}

@media screen and (max-width: 768px) {
  header {
    flex-direction: column;
  }

  .navbar-toggler {
    margin-left: 1.5rem;
  }

  h1 {
    font-size: 20px;
  }

  h2 {
    font-size: 16px !important;
  }

  p,
  .p {
    font-size: 14px;
  }

  .hero-logo {
    max-height: 100%;
  }

  .hero {
    height: 30vh;
  }
}

